public/frontend/activation.css
.payment-card {
    background: #0C1018;
    border: 1px solid #1E293B;
    border-radius: 10px;
    padding: 24px;
}

#payment-methods-part{
    display: none;
}

.submit-btn{
    width: 270px;
    border-radius: 10px;
    font-size: 25px;
}
#price-text {
    /*margin-top:20px;*/
    font-size: 17px;
    color: #333;
    font-weight: bold;
}
.payment-method-container {
    /*max-width: 400px;*/
    margin: 0 auto;
}
.payment-title {
    font-size: 20px;
    font-weight: normal;
    color: #222;
    margin-bottom: 5px;
}
.payment-method-item-container {
    position: absolute;
    text-align: center;
    background: #fff;
    padding: 5px 10px;
    border-radius: 5px;
    color: #444;
    top: -20px;
    left: 50%;
    transform: translateX(-50%);
    width: fit-content;
}
.payment-method-item-container[data-payment_type="card"] {
    border-bottom: none;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    cursor: pointer;
    transition: all 0.5s;
}
.payment-method-item-container[data-payment_type="paypal"] {
    border-radius: 0;
}
.payment-method-item-container[data-payment_type="sofort"] {
    border-radius: 0;
    border-top:0;
    border-bottom: none;
}
.payment-method-item-container[data-payment_type="crypto"] {
    border-top-left-radius:0;
    border-top-right-radius: 0;
}
.payment-method-item-container:hover,.payment-method-item-container.active {
    background: #ddd;
    color: #000;
}
.payment-method-icon {
    margin-right: 20px;
    /*width: 40px;*/
    text-align: center;
}
.payment-item-detail-container{
    display: none;
    overflow: hidden;
    transition: height 1.5s;
    border: 1px solid #666;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    margin-bottom:10px;
}
.payment-item-detail-container.active {
    display: block;
}

.card-payment-method-body{
    padding:10px 10px;
}
.card-error{
    color: #ee0404;
}
.error {
    color: #cc0000;
    margin-top: 0;
}

.border-bottom-rad-0{
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.border-bottom-none{
    border-bottom: none;
}

#coin-select {
    border-top:none;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
}

.hide{
    display: none;
}
.or{
    width: fit-content;
    background: #fff;
    z-index: 100;
    padding: 0 10px;
    font-size: 20px;
    color: #111;
    letter-spacing: 2px;
    overflow: hidden;
    position: absolute;
    left:50%;
    top: 50%;
    transform: translate(-50%,-50%);
}
.or-border{
    margin-top: 0;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 100%;
    overflow: hidden;
    border-bottom: 2px solid #333;
    z-index: 0;
}
.or-container{
    height: 80px;
}

.payment-item-container{
    position:relative;
    border: 1px solid #353b4a;
    border-radius: 5px;
    padding: 60px 20px 30px 20px;
    margin-top: 20px;
}

#disabled-container{
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: #fff;
    opacity: 0.5;
    z-index: 100;
}
#mac-invalid-info-container, #email-error-message{
    display: none;
    color: #ff0000;
}
#mac-valid-info-container{
    display: none;
}
#expire-date-container{
    font-size: 17px;
    color: #333;
    font-weight: bold;
}
/* ... */

